--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,25 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Arial", sans-serif;
-    font-size: 1.5rem;
+    font-size: 16px;
+}
+
+form{
+    padding-top: 20px;
 }
 
 .show-images img{
-    width: 200px;
-    height: 200px;
+    margin-top: 20px;
+    width: 300px;
+    height: 300px;
+    border: 2px solid black;
+
 }
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+
 
