--- a/public/style.css
+++ b/public/style.css
@@ -7,24 +7,105 @@ body {
     padding: 0;
     font-family: "Arial", sans-serif;
     font-size: 16px;
+    background-color: #F2F2F2;
 }
 
 form{
-    padding-top: 20px;
+    padding-top: 10px;
+    height:3rem;
+    background-color: #0396A6;
+    color:#F2F2F2;
+}
+.input-field {
+    margin-right: 0px;
+    font-size: large;
+}
+.input-field label{
+    font-size: large;
+}
+.input-field:focus {
+    background-color: #9CD3D8;
+}
+.input-field button {
+    background-color: #9CD3D8;
+}
+header {
+    height: 5rem;
+    display: flex;
+    width: 100%;
+    border-radius: 2px;
+    align-items: center;
+    justify-content: center;
+    background-color: #0B698B;
+    color:#9CD3D8;
+}
+#more-btn{
+    text-align: center;
+}
+
+#more-btn button {
+    font-size: large;
+}
+
+.show-images{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);;
+    column-gap: 15px;
+    row-gap: 30px;
+    justify-items: center;
 }
 
 .show-images img{
-    margin-top: 20px;
+    margin-top: 40px;
     width: 300px;
     height: 300px;
-    border: 2px solid black;
-
 }
-.container{
+
+.show-images h4{
+    margin-top: 5px;
+    background-color: #0396A6;
+    height:20px;
+    width:300px;
+    text-align: center;
+}
+
+.modal {
+    text-align: center;
+    top:20%;
+    padding:20px;
+    width:800px;
+    height: 600px;
+    margin:0, auto;
+    background-color: #9CD3D8;
+}
+
+.modal img{
+    width: 300px;
+    height: 300px;
+}
+
+.modal-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: #00000094;
+    z-index: 999;
+    transition: opacity 0.2s ease;
 }
 
+.close-button{
+    float: right;
+    top:0;
+    right: 0;
+    border-style: none;
+    background-color: #9CD3D8;
+    font-size: 20px;
+}
 
 
